依助教建議優化_v1

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
   <div class="header bg-primary">
     <div class="nav d-flex flex-jc-sbetween flex-ai-center">
       <h1 class="logo">
-        <a href="index.html"><img src="../icon/logo.png" alt="LOGO"></a>
+        <a href="index.html">LOGO</a>
       </h1>
       <ul class="menu d-flex flex-wrap">
         <li><a href="gategory.html" class="text-light">系列鏡框</a></li>
@@ -26,7 +26,7 @@
 
   <!-- banner -->
   <div class="banner">
-    <div class="container">
+    <div class="container d-flex flex-ai-center">
       <h2 class="topic d-flex flex-column text-primary">
         <span>Promise-Desert 2020 早春系列</span>看得清，才能看得遠</h2>
     </div>
@@ -155,34 +155,37 @@
   </div>
 
   <!-- contact -->
-  <div class="contact  bg-secondary">
-    <div class="wrap">
-      <h2 class="title text-secondary">聯絡我們</h2>
-      <p class="text-secondary">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
-      <form action="" class="d-flex flex-column">
-        <div class="inputGroup d-flex flex-column d-flex flex-column">
-          <label for="name" class="text-secondary">姓名</label>
-          <input type="text" id="name" placeholder="陳小明">
-        </div>
-        <div class="inputGroup d-flex flex-column">
-          <label for="tel" class="text-secondary">連絡電話</label>
-          <input type="tel" id="tel" placeholder="0912-345-678"> 
-        </div>
-        <div class="inputGroup d-flex flex-column">
-          <label for="email" class="text-secondary">電子郵件</label>
-          <input type="email" id="email" placeholder="example@email.com">
-        </div>
-        <div class="inputGroup d-flex flex-column">
-          <label for="comment" class="text-secondary">意見反應</label>
-          <textarea name="" id="comment" cols="30" rows="10" placeholder="請輸入您的意見"></textarea >
-        </div>
-        <div class="checkboxGroup">
-          <input type="checkbox" id="privacy">
-          <label for="privacy" class="text-secondary">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
-        </div>
-        <input type="submit" value="確認送出" class="submit bg-primary text-light">
-      </form>
+  <div class="contact bg-secondary">
+    <div class="container">
+      <div class="wrap">
+        <h2 class="title text-secondary">聯絡我們</h2>
+        <p class="text-secondary">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+        <form action="" class="d-flex flex-column">
+          <div class="inputGroup">
+            <label for="name" class="text-secondary">姓名</label>
+            <input type="text" id="name" placeholder="陳小明">
+          </div>
+          <div class="inputGroup">
+            <label for="tel" class="text-secondary">連絡電話</label>
+            <input type="tel" id="tel" placeholder="0912-345-678"> 
+          </div>
+          <div class="inputGroup">
+            <label for="email" class="text-secondary">電子郵件</label>
+            <input type="email" id="email" placeholder="example@email.com">
+          </div>
+          <div class="inputGroup">
+            <label for="comment" class="text-secondary">意見反應</label>
+            <textarea name="" id="comment" cols="30" rows="10" placeholder="請輸入您的意見"></textarea >
+          </div>
+          <div class="checkboxGroup">
+            <input type="checkbox" id="privacy">
+            <label for="privacy" class="text-secondary">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
+          </div>
+          <input type="submit" value="確認送出" class="submit bg-primary text-light">
+        </form>
+      </div>
     </div>
+    
   </div>
 
   <!-- footer -->
@@ -214,9 +217,9 @@
           </li>
         </ul>
       </div>
-      <div class="infoFooter d-flex flex-jc-sbetween">
+      <div class="infoFooter d-flex flex-jc-sbetween flex-ai-center">
         <div class="copyright d-flex flex-ai-center">
-          <h2 class="logo"><a href="index.html""><img src="../icon/logo.png" alt="LOGO"></a></h2>
+          <h2 class="logo"><a href="index.html"">LOGO</a></h2>
           <p class="text-light">Copyright © 2020 Glasses.All rights reserved.</p>
         </div>
         <ul class="otherInfo d-flex">
